force-app/main/default/objects/Forecast_Configuration__c/Forecast_Configuration__c.object-meta.xml
<CustomObject>
    <description>Top-level configuration for a forecasting deployment. Defines hierarchy, metrics, categories, periods, and scoring rules.</description>
    <label>Forecast Configuration</label>
    <nameField><label>Forecast Configuration Name</label><type>Text</type></nameField>
    <pluralLabel>Forecast Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>