force-app/main/default/objects/Forecast_Configuration__c/fields/Attainment_Layout__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Layout__c</fullName>
    <label>Attainment Layout</label>
    <description>Attainment Layout</description>
    <inlineHelpText>Attainment Layout</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Current_Period</fullName><default>false</default><label>Current_Period</label></value>
            <value><fullName>Period_And_YTD</fullName><default>false</default><label>Period_And_YTD</label></value>
            <value><fullName>Expanded_Multi_Period</fullName><default>false</default><label>Expanded_Multi_Period</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>