force-app/main/default/objects/Forecast_Configuration__c/fields/Attainment_Source__c.field-meta.xml
<CustomField>
    <fullName>Attainment_Source__c</fullName>
    <label>Attainment Source</label>
    <description
  >How attainment (achieved amount) is calculated. Quota Record: reads from Quota__c.Achieved_Amount__c (maintained by Incentives module). Live from Forecast: computes from Closed Won category overrides in the current period. Hybrid: uses Quota if available, falls back to live calculation.</description>
    <inlineHelpText
  >Quota Record: uses Incentives module quota tracking. Live from Forecast: computes from Closed Won deals. Hybrid: Quota if available, otherwise live.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Quota_Record</fullName><default
        >true</default><label>Quota Record</label></value>
            <value><fullName>Live_From_Forecast</fullName><default
        >false</default><label>Live from Forecast</label></value>
            <value><fullName>Hybrid</fullName><default>false</default><label
        >Hybrid</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>