force-app/main/default/objects/Forecast_Configuration__c/fields/Auto_Freeze_On_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Auto_Freeze_On_Deadline__c</fullName>
    <label>Auto Freeze On Deadline</label>
    <description
  >When checked, unsubmitted forecasts are automatically frozen at 23:59:59 org timezone on the deadline day.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>