force-app/main/default/objects/Forecast_Configuration__c/fields/Budget_Mode_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Budget_Mode_Enabled__c</fullName>
    <label>Budget Mode Enabled</label>
    <description>Budget Mode Enabled</description>
    <inlineHelpText>Budget Mode Enabled</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>