force-app/main/default/objects/Forecast_Configuration__c/fields/Cadence_Anchor_Date__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Anchor_Date__c</fullName>
    <label>Cadence Anchor Date</label>
    <description
  >Bi-weekly anchor: first cadence cycle starts on first matching deadline day on or after this date.</description>
    <type>Date</type>
</CustomField>