force-app/main/default/objects/Forecast_Configuration__c/fields/Conflict_Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Alert_Enabled__c</fullName>
    <label>Conflict Alert Enabled</label>
    <description>Show alert for high-confidence + low health</description>
    <inlineHelpText>Show alert for high-confidence + low health</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>