force-app/main/default/objects/Forecast_Configuration__c/fields/Corporate_Currency__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Currency__c</fullName>
    <label>Corporate Currency</label>
    <description>ISO currency code</description>
    <inlineHelpText>ISO currency code</inlineHelpText>
    <type>Text</type>
    <length>5</length>
</CustomField>