force-app/main/default/objects/Forecast_Configuration__c/fields/Currency_Mode__c.field-meta.xml
<CustomField>
    <fullName>Currency_Mode__c</fullName>
    <label>Currency Mode</label>
    <description>Currency Mode</description>
    <inlineHelpText>Currency Mode</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single</fullName><default>false</default><label>Single</label></value>
            <value><fullName>MultiWithDatedRates</fullName><default>false</default><label>MultiWithDatedRates</label></value>
            <value><fullName>MultiWithStaticRates</fullName><default>false</default><label>MultiWithStaticRates</label></value>
            <value><fullName>DualDisplay</fullName><default>false</default><label>DualDisplay</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>