force-app/main/default/objects/Forecast_Configuration__c/fields/Custom_Horizon_Periods__c.field-meta.xml
<CustomField>
    <fullName>Custom_Horizon_Periods__c</fullName>
    <label>Custom Horizon Periods</label>
    <description
  >Phase C: When Default_Horizon = Custom, how many periods to show.</description>
    <inlineHelpText
  >Only used when Default Horizon is set to Custom.</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
</CustomField>