force-app/main/default/objects/Forecast_Configuration__c/fields/Default_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Default_Horizon__c</fullName>
    <label>Default Forecast Horizon</label>
    <description
  >Phase C: How many periods the forecast shows by default. Multi-period horizons are read-only summary views \u2014 editing requires Current Period mode.</description>
    <inlineHelpText
  >Default scope of the forecast view. Users can change this at runtime from the Forecast tab toolbar.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current_Period</fullName>
                <default>true</default>
                <label>Current Period Only</label>
            </value>
            <value>
                <fullName>Current_Plus_Next</fullName>
                <label>Current + Next Period</label>
            </value>
            <value>
                <fullName>Quarter</fullName>
                <label>Current Quarter (3 months)</label>
            </value>
            <value>
                <fullName>Quarter_Plus_Next</fullName>
                <label>Current + Next Quarter (6 months)</label>
            </value>
            <value>
                <fullName>Fiscal_Year</fullName>
                <label>Fiscal Year (12 months)</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <label>Custom (N periods)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>