force-app/main/default/objects/Forecast_Configuration__c/fields/Event_Retention_Years__c.field-meta.xml
<CustomField>
    <fullName>Event_Retention_Years__c</fullName>
    <label>Event Retention Years</label>
    <description>Change events older than this are archivable</description>
    <inlineHelpText>Change events older than this are archivable</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>