force-app/main/default/objects/Forecast_Configuration__c/fields/Final_Forecast_Label__c.field-meta.xml
<CustomField>
    <fullName>Final_Forecast_Label__c</fullName>
    <label>Final Forecast Label</label>
    <description
  >Phase C: UI label for the Final Forecast number (sum of categories where Counts_Toward_Target__c = true).</description>
    <inlineHelpText
  >Label shown above the Final Forecast tile. Defaults to "Final Forecast".</inlineHelpText>
    <type>Text</type>
    <length>50</length>
    <defaultValue>"Final Forecast"</defaultValue>
</CustomField>