force-app/main/default/objects/Forecast_Configuration__c/fields/Fiscal_Year_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Start_Month__c</fullName>
    <label>Fiscal Year Start Month</label>
    <description>Month number (1-12) fiscal year starts</description>
    <inlineHelpText>Month number (1-12) fiscal year starts</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>