force-app/main/default/objects/Forecast_Configuration__c/fields/Forecast_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Cadence__c</fullName>
    <label>Forecast Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi_Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>