force-app/main/default/objects/Forecast_Configuration__c/fields/Future_Periods_Visible__c.field-meta.xml
<CustomField>
    <fullName>Future_Periods_Visible__c</fullName>
    <label>Future Periods Visible</label>
    <description>How many future periods to show</description>
    <inlineHelpText>How many future periods to show</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>