force-app/main/default/objects/Forecast_Configuration__c/fields/Hierarchy_Levels__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Levels__c</fullName>
    <label>Hierarchy Levels</label>
    <description>Number of hierarchy levels (2-10)</description>
    <inlineHelpText>Number of hierarchy levels (2-10)</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>