force-app/main/default/objects/Forecast_Configuration__c/fields/Hourly_Snapshot_Days__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Snapshot_Days__c</fullName>
    <label>Hourly Snapshot Days</label>
    <description>Days before period end to activate hourly snapshots</description>
    <inlineHelpText>Days before period end to activate hourly snapshots</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>