force-app/main/default/objects/Forecast_Configuration__c/fields/Hourly_Snapshot_Interval__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Snapshot_Interval__c</fullName>
    <label>Hourly Snapshot Interval</label>
    <description>Hours between snapshots in final-days mode</description>
    <inlineHelpText>Hours between snapshots in final-days mode</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>