force-app/main/default/objects/Forecast_Configuration__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <label>Is Default</label>
    <description>Is Default</description>
    <inlineHelpText>Is Default</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>