force-app/main/default/objects/Forecast_Configuration__c/fields/Level_Labels__c.field-meta.xml
<CustomField>
    <fullName>Level_Labels__c</fullName>
    <label>Level Labels</label>
    <description>JSON array of level labels</description>
    <inlineHelpText>JSON array of level labels</inlineHelpText>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>