force-app/main/default/objects/Forecast_Configuration__c/fields/Lock_Past_Periods__c.field-meta.xml
<CustomField>
    <fullName>Lock_Past_Periods__c</fullName>
    <label>Lock Past Periods</label>
    <description>Lock Past Periods</description>
    <inlineHelpText>Lock Past Periods</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>