force-app/main/default/objects/Forecast_Configuration__c/fields/Pagination_Size__c.field-meta.xml
<CustomField>
    <fullName>Pagination_Size__c</fullName>
    <label>Pagination Size</label>
    <description>Records per page, default 40</description>
    <inlineHelpText>Records per page, default 40</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>