force-app/main/default/objects/Forecast_Configuration__c/fields/Past_Periods_Visible__c.field-meta.xml
<CustomField>
    <fullName>Past_Periods_Visible__c</fullName>
    <label>Past Periods Visible</label>
    <description
  >Phase C: Number of past (closed) periods to show in the period picker.</description>
    <inlineHelpText
  >How many historical periods to surface in the period picker (default 2). Set to 0 to hide all closed periods.</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>2</defaultValue>
</CustomField>