force-app/main/default/objects/Forecast_Configuration__c/fields/Pipeline_Object__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Object__c</fullName>
    <label>Pipeline Object</label>
    <description>API name of the pipeline object (default Opportunity)</description>
    <inlineHelpText>API name of the pipeline object (default Opportunity)</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>