force-app/main/default/objects/Forecast_Configuration__c/fields/Pipeline_Record_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Record_Type_Filter__c</fullName>
    <label>Pipeline Record Type Filter</label>
    <description>Comma-separated Record Type Developer Names. Use LongTextArea for orgs with many record types.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>