force-app/main/default/objects/Forecast_Configuration__c/fields/Prelock_Days__c.field-meta.xml
<CustomField>
    <fullName>Prelock_Days__c</fullName>
    <label>Prelock Days</label>
    <description>Days before period end to start prelock</description>
    <inlineHelpText>Days before period end to start prelock</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>