force-app/main/default/objects/Forecast_Configuration__c/fields/Scope_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Scope_Custom_Field__c</fullName>
    <label>Scope Custom Field</label>
    <description>Only used when Scope_Determination = Custom_Field</description>
    <inlineHelpText>Only used when Scope_Determination = Custom_Field</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>