force-app/main/default/objects/Forecast_Configuration__c/fields/Scope_Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>Scope_Custom_Object__c</fullName>
    <label>Scope Custom Object</label>
    <description
  >API name of the object holding the custom scope field. Paired with Scope_Custom_Field__c. Only used when Scope_Determination = Custom_Field.</description>
    <inlineHelpText
  >e.g., Opportunity, Account, User. Only used when Scope_Determination = Custom_Field.</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>