force-app/main/default/objects/Forecast_Configuration__c/fields/Scope_Determination__c.field-meta.xml
<CustomField>
    <fullName>Scope_Determination__c</fullName>
    <label>Scope Determination</label>
    <description>Scope Determination</description>
    <inlineHelpText>Scope Determination</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ownership</fullName><default>false</default><label>Ownership</label></value>
            <value><fullName>Territory</fullName><default>false</default><label>Territory</label></value>
            <value><fullName>Custom_Field</fullName><default>false</default><label>Custom_Field</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>