force-app/main/default/objects/Forecast_Configuration__c/fields/Stretch_Forecast_Label__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Forecast_Label__c</fullName>
    <label>Stretch Forecast Label</label>
    <description
  >Phase C: UI label for the Stretch Forecast number (sum of categories where Counts_Toward_Stretch__c = true).</description>
    <inlineHelpText
  >Label shown above the Stretch Forecast tile. Defaults to "Stretch Forecast".</inlineHelpText>
    <type>Text</type>
    <length>50</length>
    <defaultValue>"Stretch Forecast"</defaultValue>
</CustomField>