force-app/main/default/objects/Forecast_Configuration__c/fields/Submission_Deadline_Day__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline_Day__c</fullName>
    <label>Submission Deadline Day</label>
    <description
  >Day literal (Mon-Sun) for weekly/bi-weekly, or day number (1-31/1-90) for monthly/quarterly.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>