force-app/main/default/objects/Forecast_Configuration__c/fields/Summary_All_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Summary_All_Metrics__c</fullName>
    <label>Summary All Metrics</label>
    <description
  >When checked, persist forecast summaries for all metrics, not just the primary metric.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>