force-app/main/default/objects/Forecast_Configuration__c/fields/Summary_Expanded_Periods__c.field-meta.xml
<CustomField>
    <fullName>Summary_Expanded_Periods__c</fullName>
    <label>Summary Expanded Periods</label>
    <description>JSON: which period types to expand in Layout C</description>
    <inlineHelpText>JSON: which period types to expand in Layout C</inlineHelpText>
    <type>Text</type>
    <length>200</length>
</CustomField>