force-app/main/default/objects/Forecast_Configuration__c/fields/Top_Level_Lock_Label__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Lock_Label__c</fullName>
    <label>Top Level Lock Label</label>
    <description>Label for the top-level freeze/lock action</description>
    <inlineHelpText>Label for the top-level freeze/lock action</inlineHelpText>
    <type>Text</type>
    <length>30</length>
</CustomField>